package org.example;

public class Main {
    public static void main(String[] args) {
        Streaming s1 = new Streaming();
        s1.streamingSetup();
        s1.startStream();
    }
}